# nanogrindv1

./: .gitignore  AGENTS_MCP.md  DEPLOY.md  Makefile  Modelfile  PLAN.md  README.md  USER.md  add_weekly_fields.py  check_behavioral.py  cleanup_nc015.py  clear_in_progress.py  config.mistral.json  config.qwen.json  cron_jobs.json  generate_language_quiz.py  generate_sql_concepts.py  log_dump.sh  memory_MEMORY.md  migrate_behavioral.py  nanobot-llama-qwen.md  nanogrind-history-v1-v2.md  pyproject.toml  reset_lang_quiz_progress.py  rotate_session.py  seed_notes.py  split_design_patterns.py  timer_check.py  token-proxy.service  token_proxy.py
.claude/: settings.local.json
cron/: jobs.json
servers/: config.py  content_server.py  progress_server.py
skills/: interview-prep.md
tests/: conftest.py  test_integration.py  test_progress.py
v1/: MIGRATE_V1_TO_V2.md
vm_updates/: MEMORY.md  progress.json
workspace/: AGENTS.md  SOUL.md  USER.md  nanobot_MEMORY.md
workspace/interview-prep/: cron_jobs.json
workspace/interview-prep/data/: attempts.json  behavioral.json  curriculum.json  data_structures.json  design_patterns.json  progress.json  sql_problems.json  system_design.json  weak_areas.json
workspace/interview-prep/data/aiml/: ml_c01.json  ml_c02.json  ml_c03.json  ml_c04.json  ml_c05.json  ml_c06.json  ml_c07.json  ml_c08.json  ml_d01.json  ml_d02.json  ml_d03.json  ml_d04.json  ml_d05.json  ml_f01.json  ml_f02.json  ml_f03.json  ml_f04.json  ml_f05.json  ml_m01.json  ml_m02.json  (+16 more)
workspace/memory/: MEMORY.md
workspace/skills/interview-prep/: SKILL.md
(+232 files in other folders)
